[SPARTA] Fix z-index of the debug in wizard (#1797)

--- a/web/src/app/modules/shared/components/console-box/console-box.styles.scss
+++ b/web/src/app/modules/shared/components/console-box/console-box.styles.scss
@@ -8,7 +8,7 @@
   bottom: 0;
   top:60%;
   border-top: 1px solid #b7cad9;
-  z-index: 7000;
+  z-index: 9000;
   transition: 0.2s transform;
 }
 
